--- a/src/main/react/src/styles/core.scss
+++ b/src/main/react/src/styles/core.scss
@@ -1,8 +1,18 @@
 :global {
+  html {
+    box-sizing: border-box;
+  }
+
   html,
   body {
     margin: 0;
     padding: 0;
     height: 100%;
+  }
+
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
   }
 }
