Change main file to app.js

--- a/src/main/yarn/src/html/layouts/application.html
+++ b/src/main/yarn/src/html/layouts/application.html
@@ -12,7 +12,7 @@
   <body>
     {% block content %}{% endblock %}
     {% block javascript %}
-      <script src="javascripts/main.js"></script>
+      <script src="javascripts/app.js"></script>
     {% endblock %}
   </body>
 </html>
