--- a/src/main/yarn/src/javascripts/components/Header/Header.scss
+++ b/src/main/yarn/src/javascripts/components/Header/Header.scss
@@ -1,4 +1,14 @@
-.route--active {
-  font-weight: bold;
-  text-decoration: underline;
+@import '../../styles/theme/bootstrap/variables';
+
+.simpleHeaderWrap {
+    margin: 0 0 19px;
+    border-bottom: 1px solid $gray;
+    padding-bottom: 8.5px;
+
+    .headerPart {
+        > h1 {
+            margin: .67em 0;
+            font-size: 2em;
+        }
+    }
 }
