--- a/src/main/yarn/src/javascripts/components/Table/Table.scss
+++ b/src/main/yarn/src/javascripts/components/Table/Table.scss
@@ -1,4 +1,4 @@
-@import '~@owczar/spin-template/src/scss/bootstrap/variables';
+@import '../../styles/theme/bootstrap/variables';
 
 .table {
     th {
