--- a/src/main/app/src/index.scss
+++ b/src/main/app/src/index.scss
@@ -1,3 +1,7 @@
+$icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
+@import "bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
+@import "bootstrap-sass/assets/stylesheets/bootstrap";
+
 body {
   margin: 0;
   padding: 0;
