Starting theme directory

--- a/src/main/app/src/index.scss
+++ b/src/main/app/src/index.scss
@@ -1,6 +1,7 @@
 $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
 @import "bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
 @import "bootstrap-sass/assets/stylesheets/bootstrap";
+@import "theme/app.scss";
 
 body {
   margin: 0;
