Include new variable files in app.scss

--- a/src/main/app/src/theme/app.scss
+++ b/src/main/app/src/theme/app.scss
@@ -1,2 +1,4 @@
 @import 'bootstrap-sass/assets/stylesheets/_bootstrap.scss';
+@import './bootstrap/variables.scss';
+@import 'variables.scss';
 @import 'glyphicons.scss';
