--- a/src/main/app/src/theme/glyphicons.scss
+++ b/src/main/app/src/theme/glyphicons.scss
@@ -1,2 +1,3 @@
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss';
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/_glyphicons.scss';
+@import './bootstrap/variables.scss';
