Add body colors

--- a/src/main/app/src/theme/bootstrap/variables.scss
+++ b/src/main/app/src/theme/bootstrap/variables.scss
@@ -9,3 +9,6 @@ $gray-dark:                                 #2d2d2d;
 $gray:                                      #383838;
 $gray-light:                                #444444;
 $gray-lighter:                              #5c5c5c;
+
+$body-bg:               #212121;
+$text-color:            $gray-lighter;
