--- a/src/main/app/src/theme/bootstrap/variables.scss
+++ b/src/main/app/src/theme/bootstrap/variables.scss
@@ -12,3 +12,12 @@ $gray-lighter:                              #5c5c5c;
 
 $body-bg:               #212121;
 $text-color:            $gray-lighter;
+
+$font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-serif:       Georgia, "Times New Roman", Times, serif;
+$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
+$font-family-base:        $font-family-sans-serif;
+
+$icon-font-path:          "bootstrap-sass/assets/fonts/bootstrap/";
+$icon-font-name:          "glyphicons-halflings-regular";
+$icon-font-svg-id:        "glyphicons_halflingsregular";
